html structure finished

--- a/index.html
+++ b/index.html
@@ -179,11 +179,6 @@
             </div>
         </div>
     </section>
-    
-    <!-- MAIN__MAP -->
-    <section class="main__map" id="map">
-
-    </section>
 
     <!-- MAIN__MENU -->
     <section class="main__menu" id="menu">
@@ -993,48 +988,48 @@
                     <div class="main__team__cards__card__img card-img-1"></div>
                     <div class="main__team__cards__card__content">
                         <h3 class="main__team__cards__card__content__title">Fernando Fariña</h3>
-                        <p class="main__team__cards__card__content__txt">El jefe de personal de el restaurante.</p>
-                        <a href="https://uzilekz.github.io/Restaurantic/index.html" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <p class="main__team__cards__card__content__txt">Jefe del personal y aprendiz de ingles.</p>
+                        <a href="https://www.linkedin.com/in/ffarina1985/" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-2"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Restaurantic</h3>
-                        <p class="main__team__cards__card__content__txt">Uno de mis primeros projectos, el cual ha terminado bastante bien.</p>
-                        <a href="https://uzilekz.github.io/Restaurantic/index.html" target="_blank" class="main__team__cards__card__content__link">Ver Projecto</a>
+                        <h3 class="main__team__cards__card__content__title">Germán Martitegui</h3>
+                        <p class="main__team__cards__card__content__txt">Chef principal y jurado en los eventos del establecimiento.</p>
+                        <a href="https://www.instagram.com/germanmartitegui/?hl=es" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-3"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Restaurantic</h3>
-                        <p class="main__team__cards__card__content__txt">Uno de mis primeros projectos, el cual ha terminado bastante bien.</p>
-                        <a href="https://uzilekz.github.io/Restaurantic/index.html" target="_blank" class="main__team__cards__card__content__link">Ver Projecto</a>
+                        <h3 class="main__team__cards__card__content__title">Donato de Santis</h3>
+                        <p class="main__team__cards__card__content__txt">Chef profesional amado por los clientes.</p>
+                        <a href="https://www.instagram.com/donatodesantis/?hl=es" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-4"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Restaurantic</h3>
-                        <p class="main__team__cards__card__content__txt">Uno de mis primeros projectos, el cual ha terminado bastante bien.</p>
-                        <a href="https://uzilekz.github.io/Restaurantic/index.html" target="_blank" class="main__team__cards__card__content__link">Ver Projecto</a>
+                        <h3 class="main__team__cards__card__content__title">Damián Betular</h3>
+                        <p class="main__team__cards__card__content__txt">Chef profesional, pero novato en degustacion.</p>
+                        <a href="https://www.instagram.com/dbetular/?hl=es" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-5"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Restaurantic</h3>
-                        <p class="main__team__cards__card__content__txt">Uno de mis primeros projectos, el cual ha terminado bastante bien.</p>
-                        <a href="https://uzilekz.github.io/Restaurantic/index.html" target="_blank" class="main__team__cards__card__content__link">Ver Projecto</a>
+                        <h3 class="main__team__cards__card__content__title">Florencia Palavecino</h3>
+                        <p class="main__team__cards__card__content__txt">Mesera en jefe y reclutadora.</p>
+                        <a href="https://www.linkedin.com/in/florpalavecino97/" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-6"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Restaurantic</h3>
-                        <p class="main__team__cards__card__content__txt">Uno de mis primeros projectos, el cual ha terminado bastante bien.</p>
-                        <a href="https://uzilekz.github.io/Restaurantic/index.html" target="_blank" class="main__team__cards__card__content__link">Ver Projecto</a>
+                        <h3 class="main__team__cards__card__content__title">Camila Lourdes Gomez</h3>
+                        <p class="main__team__cards__card__content__txt">Mesera profesional querida por el personal.</p>
+                        <a href="https://www.linkedin.com/in/gomezccami27/" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
             </div>
