--- a/index.html
+++ b/index.html
@@ -26,16 +26,15 @@
         <a href="#home" class="active" >Inicio</a>
         <a href="#about">Sobre Nosotros</a>
         <a href="#reviews">Reseñas</a>
-        <a href="#map">Mapa</a>
         <a href="#menu">Menu</a>
         <a href="#team">Equipo</a>
         <a href="#order">Pedidos</a>
     </nav>
     <!-- HEADER__ICONS -->
     <div class="header__icons">
-        <i class="fas fa-bars" id="menu-bars"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
+        <i class="fas fa-bars" id="menu-bars"></i>
     </div>
 </header>
 
@@ -44,7 +43,7 @@
 
     <!-- MAIN__HERO -->
     <section class="main__hero" id="home" >
-        <video class="main__hero__video-bg" onloadedmetadata="this.muted=true" autoplay loop>
+        <video class="main__hero__video-bg" preload="metadata" muted autoplay loop>
             <source src="images/hero.mp4">
         </video>
         <div class="main__hero__content">
@@ -987,49 +986,49 @@
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-1"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Fernando Fariña</h3>
-                        <p class="main__team__cards__card__content__txt">Jefe del personal y aprendiz de ingles.</p>
-                        <a href="https://www.linkedin.com/in/ffarina1985/" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <h3 class="main__team__cards__card__content__title">Fernando Gomez</h3>
+                        <p class="main__team__cards__card__content__txt">Jefe de Seguridad.</p>
+                        <a href="#" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-2"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Germán Martitegui</h3>
+                        <h3 class="main__team__cards__card__content__title">Germán Romero</h3>
                         <p class="main__team__cards__card__content__txt">Chef principal y jurado en los eventos del establecimiento.</p>
-                        <a href="https://www.instagram.com/germanmartitegui/?hl=es" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <a href="#" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-3"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Donato de Santis</h3>
-                        <p class="main__team__cards__card__content__txt">Chef profesional amado por los clientes.</p>
-                        <a href="https://www.instagram.com/donatodesantis/?hl=es" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <h3 class="main__team__cards__card__content__title">Sebastian Pintos</h3>
+                        <p class="main__team__cards__card__content__txt">Chef profesional, pero novato en degustacion.</p>
+                        <a href="#" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-4"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Damián Betular</h3>
-                        <p class="main__team__cards__card__content__txt">Chef profesional, pero novato en degustacion.</p>
-                        <a href="https://www.instagram.com/dbetular/?hl=es" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <h3 class="main__team__cards__card__content__title">Pablo Migoni</h3>
+                        <p class="main__team__cards__card__content__txt">Chef profesional amado por los clientes.</p>
+                        <a href="#" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-5"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Florencia Palavecino</h3>
-                        <p class="main__team__cards__card__content__txt">Mesera en jefe y reclutadora.</p>
-                        <a href="https://www.linkedin.com/in/florpalavecino97/" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <h3 class="main__team__cards__card__content__title">Camila Martitegui</h3>
+                        <p class="main__team__cards__card__content__txt">Mesera principal.</p>
+                        <a href="#" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
                 <div class="main__team__cards__card">
                     <div class="main__team__cards__card__img card-img-6"></div>
                     <div class="main__team__cards__card__content">
-                        <h3 class="main__team__cards__card__content__title">Camila Lourdes Gomez</h3>
-                        <p class="main__team__cards__card__content__txt">Mesera profesional querida por el personal.</p>
-                        <a href="https://www.linkedin.com/in/gomezccami27/" target="_blank" class="main__team__cards__card__content__link">Conocer</a>
+                        <h3 class="main__team__cards__card__content__title">Jose Luis</h3>
+                        <p class="main__team__cards__card__content__txt">Mesero profesional querido por el personal.</p>
+                        <a href="#" class="main__team__cards__card__content__link">Conocer</a>
                     </div>
                 </div>
             </div>
@@ -1101,11 +1100,10 @@
                 <a href="#">Mar del Plata</a>
             </div>
             <div class="box">
-                <h3>Contacto</h3>
+                <h3>Contactanos</h3>
                 <a href="#">+123-456-7890</a>
                 <a href="#">+865-222-3333</a>
-                <a href="#">p.a.gerardo.software.engineer<br>
-                    @gmail.com</a>
+                <a href="#">los.colineros@gmail.com</a>
             </div>
             <div class="box">
                 <h3>Siguenos</h3>
@@ -1123,7 +1121,7 @@
                     <path fill="#ff005d" d="M82.32,7.888c-8.359-7.671-21.91-7.671-30.271,0l-5.676,5.21l-5.678-5.21c-8.357-7.671-21.91-7.671-30.27,0 c-9.404,8.631-9.404,22.624,0,31.255l35.947,32.991L82.32,39.144C91.724,30.512,91.724,16.52,82.32,7.888z"></path>
                 </svg>
             </div>
-            <span>por <a href="https://github.com/Uzilekz" target="_blank">@Uzilekz</a></span>
+            <span>por <a href="https://uzilekz.github.io/Portafolio/" target="_blank">@Uzilekz</a></span>
         </div>
     </section>
 </footer>
@@ -1132,6 +1130,8 @@
 <div class="loader-container">
     <img src="images/loader.gif" alt="">
 </div>
+
+<!-- JS -->
 <!-- Animacion de las CARDS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -1144,8 +1144,9 @@
         "max-glare": .4,
     });
 </script>
-<!-- JS -->
+<!-- SWIPER Reviews -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<!-- Index JS -->
 <script src="js/index.js"></script>
 
 </body>
