--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <h3>Garbanzos con Espinaca</h3>
-                        <p>Garbanzos con varias hojas de acelga.</p>
+                        <p>Garbanzos con varias hojas de espinaca.</p>
                         <div class="menu__btn-price">
                             <a href="#" class="btn">Añadir al carrito</a>
                             <span class="price">$500</span>
