--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="header">
     <!-- HEADER__LOGO -->
     <a href="#" class="header__logo">
-        <img src="images/logo.png" alt="" class="header__logo__title">Los Colineros.
+        <img src="images/logo.png" alt="" class="header__logo__title"><p>Los Colineros.</p>
     </a>
     <!-- HEADER__NAV -->
     <nav class="header__nav">
@@ -197,7 +197,7 @@
                 <div class="box">
                     <div class="image">
                         <img src="images/agua.jpg" alt="">
-                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-heart heart-active"></a>
                     </div>
                     <div class="content">
                         <div class="stars">
@@ -980,7 +980,7 @@
     <!-- MAIN__TEAM -->
     <section class="main__team" id="team">
         <h2 class="sub-heading"> Nuestro Equipo </h2>
-        <h3 class="heading"> los mejores de los mejores </h3>
+        <h3 class="heading"> los mejores </h3>
         <div class="cards-container">
             <div class="main__team__cards">
                 <div class="main__team__cards__card">
