--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- SWIPER JS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <!-- ScrollReveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
@@ -86,7 +88,7 @@
     <!-- MAIN__REVIEWS -->
     <section class="main__reviews" id="reviews">
         <h2 class="sub-heading"> Reseñas de Clientes </h2>
-        <h3 class="heading"> veamos lo que cuentan </h3>
+        <h3 class="heading"> veamos lo que dicen </h3>
         <!-- Swiper -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
@@ -182,7 +184,7 @@
     <!-- MAIN__MENU -->
     <section class="main__menu" id="menu">
         <h2 class="sub-heading"> El Menu </h2>
-        <h3 class="heading"> elige lo que prefieras </h3>
+        <h3 class="heading"> disfruta eligiendo </h3>
         <div class="main__menu__buttons">
             <button class="menu__btn" onclick="displayBebida()"><span>⬤ </span>BEBIDA</button>
             <button class="menu__btn" onclick="displayPasta()"><span>⬤ </span>PASTA</button>
@@ -1131,6 +1133,10 @@
     <img src="images/loader.gif" alt="">
 </div>
 
+
+
+
+
 <!-- JS -->
 <!-- Animacion de las CARDS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -1146,6 +1152,8 @@
 </script>
 <!-- SWIPER Reviews -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<!-- ScrollReveal -->
+<script src="./js/scrollReveal.js"></script>
 <!-- Index JS -->
 <script src="js/index.js"></script>
 
