--- a/index.html
+++ b/index.html
@@ -163,20 +163,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
-                    <div class="testimonialBox">
-                        <img src="images/quote.png" class="quote">
-                        <div class="content">
-                            <p>"Estos precios valen la pena y los cocineros son super amables. Pido a todo el mundo que se pase por lo menos una vez por aqui."</p>
-                            <div class="details">
-                                <div class="imgBox">
-                                    <img src="images/user6.jpg">
-                                </div>
-                                <h4>Sofia<br><span>Influencer</span></h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -1145,9 +1131,9 @@
 <script>
     VanillaTilt.init(document.querySelectorAll(".main__team__cards__card"), {
         max: 25,
-        speed: 400,
-        glare: true,
-        "max-glare": .4,
+        speed: 300,
+        glare: false,
+        "max-glare": 0,
     });
 </script>
 <!-- SWIPER Reviews -->
