Footer | @Uzilekz to @Gerardo P.A

--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
                     <path fill="#ff005d" d="M82.32,7.888c-8.359-7.671-21.91-7.671-30.271,0l-5.676,5.21l-5.678-5.21c-8.357-7.671-21.91-7.671-30.27,0 c-9.404,8.631-9.404,22.624,0,31.255l35.947,32.991L82.32,39.144C91.724,30.512,91.724,16.52,82.32,7.888z"></path>
                 </svg>
             </div>
-            <span>por <a href="https://uzilekz.github.io/Portafolio/" target="_blank">@Uzilekz</a></span>
+            <span>por <a href="https://uzilekz.github.io/Portafolio/" target="_blank">@Gerardo P.A</a></span>
         </div>
     </section>
 </footer>
